--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -415,11 +415,9 @@ main .galeria .galeria__section {
         }
     }
 } */
-/* @media only screen and (min-width: 900px){ */
 main .servicio .servicio__ul {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: auto;
+  display: flex;
+  flex-wrap: wrap;
   position: relative; }
   main .servicio .servicio__ul .servicio__ul__li {
     position: relative;
@@ -447,7 +445,7 @@ main .servicio .servicio__ul {
       right: 0;
       bottom: 0;
       margin: auto;
-      font-size: 1.5vw;
+      font-size: 4vw;
       line-height: 1.6;
       background-color: #486b00;
       color: #fff;
@@ -467,27 +465,6 @@ main .servicio .servicio__ul {
           main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
             width: 100%;
             height: auto; }
-  main .servicio .servicio__ul .simple {
-    grid-column: 1 / 3;
-    grid-row: 1; }
-  main .servicio .servicio__ul .superior {
-    grid-column: 3 / 5;
-    grid-row: 1; }
-  main .servicio .servicio__ul .king {
-    grid-column: 5 / 7;
-    grid-row: 1; }
-  main .servicio .servicio__ul .jr {
-    grid-column: 1 / 4;
-    grid-row: 2;
-    font-size: 1.5em; }
-    main .servicio .servicio__ul .jr .info {
-      font-size: 2vw; }
-  main .servicio .servicio__ul .suite {
-    grid-column: 4 / 7;
-    grid-row: 2;
-    font-size: 1.5em; }
-    main .servicio .servicio__ul .suite .info {
-      font-size: 2vw; }
 
 main .servicio .servicio__ul__li:hover img {
   transition: all .5s ease-in-out;
@@ -506,6 +483,67 @@ main .servicio .servicio__ul__li img {
 main .servicio .servicio__ul__li .info {
   transition: all .5s ease-in-out;
   transform: rotateY(90deg); }
+
+@media only screen and (min-width: 464px) {
+  main .servicio .servicio__ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto; }
+    main .servicio .servicio__ul .servicio__ul__li h3 {
+      top: 5px;
+      font-size: 1em; }
+    main .servicio .servicio__ul .servicio__ul__li .info {
+      font-size: 2vw; }
+    main .servicio .servicio__ul .simple {
+      grid-column: 1 / 3;
+      grid-row: 1; }
+    main .servicio .servicio__ul .superior {
+      grid-column: 3 / 5;
+      grid-row: 1; }
+    main .servicio .servicio__ul .king {
+      grid-column: 1 / 3;
+      grid-row: 2; }
+    main .servicio .servicio__ul .jr {
+      grid-column: 3 / 5;
+      grid-row: 2; }
+    main .servicio .servicio__ul .suite {
+      grid-column: 1 / 5;
+      grid-row: 3;
+      font-size: 1.5em; }
+      main .servicio .servicio__ul .suite .info {
+        font-size: 4vw; } }
+
+@media only screen and (min-width: 900px) {
+  main .servicio .servicio__ul {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto; }
+    main .servicio .servicio__ul .servicio__ul__li {
+      position: relative;
+      border: 2px solid black; }
+      main .servicio .servicio__ul .servicio__ul__li .info {
+        font-size: 1.5vw; }
+    main .servicio .servicio__ul .simple {
+      grid-column: 1 / 3;
+      grid-row: 1; }
+    main .servicio .servicio__ul .superior {
+      grid-column: 3 / 5;
+      grid-row: 1; }
+    main .servicio .servicio__ul .king {
+      grid-column: 5 / 7;
+      grid-row: 1; }
+    main .servicio .servicio__ul .jr {
+      grid-column: 1 / 4;
+      grid-row: 2;
+      font-size: 1.5em; }
+      main .servicio .servicio__ul .jr .info {
+        font-size: 2vw; }
+    main .servicio .servicio__ul .suite {
+      grid-column: 4 / 7;
+      grid-row: 2;
+      font-size: 1.5em; }
+      main .servicio .servicio__ul .suite .info {
+        font-size: 2vw; } }
 
 .reserva {
   padding: 1em 0;
