--- a/SCSS/_servicios.scss
+++ b/SCSS/_servicios.scss
@@ -105,116 +105,176 @@
         }
     }
 } */
-/* @media only screen and (min-width: 900px){ */
 main{
     .servicio{
         .servicio__ul{
-                display: grid;
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-rows: auto;
-            position: relative;
-            .servicio__ul__li{
+            display: flex;
+                flex-wrap: wrap;
                 position: relative;
-                border: 2px solid black;
-                img{
-                    width: 100%;
-                }
-                h3{
-                    position: absolute;
-                    top: 10px;
-                    left: 10px;
-                    font-size: 1.2em;
-                    color: white;
-                    text-shadow: 3px 3px 3px $colorSombra;
-                    z-index: 3;
-                }
-                h3:hover{
-                    cursor: pointer;
-                }
-                .info{
-                    display: flex;
-                        align-items: center;
-                        justify-content: center;
-                    transform: rotateY(90deg);
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    margin: auto;
-                    font-size: 1.5vw;
-                    line-height: 1.6;
-                    background-color: #486b00;
-                    color: #fff;
-                    z-index: 2;
-                    text-transform: uppercase;
-                    .info__ul{
-                        grid-area: ul;
-                        li{
-                            text-align: center;
-                        }
+                .servicio__ul__li{
+                    position: relative;
+                    border: 2px solid black;
+                    img{
+                        width: 100%;
                     }
-                    .carousel{
-                        display: none;
-                        width: 90%;
+                    h3{
+                        position: absolute;
+                        top: 10px;
+                        left: 10px;
+                        font-size: 1.2em;
+                        color: white;
+                        text-shadow: 3px 3px 3px $colorSombra;
+                        z-index: 3;
+                    }
+                    h3:hover{
+                        cursor: pointer;
+                    }
+                    .info{
+                        display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        transform: rotateY(90deg);
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
                         margin: auto;
-                        grid-area: servicioImg;
-                        .carousel-item{
-                            width: 100%;
-                            img{
+                        font-size: 4vw;
+                        line-height: 1.6;
+                        background-color: #486b00;
+                        color: #fff;
+                        z-index: 2;
+                        text-transform: uppercase;
+                        .info__ul{
+                            grid-area: ul;
+                            li{
+                                text-align: center;
+                            }
+                        }
+                        .carousel{
+                            display: none;
+                            width: 90%;
+                            margin: auto;
+                            grid-area: servicioImg;
+                            .carousel-item{
                                 width: 100%;
-                                height: auto;
+                                img{
+                                    width: 100%;
+                                    height: auto;
+                                }
                             }
                         }
                     }
                 }
             }
-            .simple{
-                grid-column: 1 / 3;
-                grid-row: 1;
+            .servicio__ul__li:hover img{
+                transition:all .5s ease-in-out;
+                transform: rotateY(90deg);
+                transform-style: preserve-3d;
             }
-            .superior{
-                grid-column: 3 / 5;
-                grid-row: 1;
+            .servicio__ul__li:hover .info{
+                transition:.5s .5s ease-in-out;
+                transform: rotateY(0deg);
             }
-            .king{
-                grid-column: 5 / 7;
-                grid-row: 1;
-            }
-            .jr{
-                grid-column: 1 / 4;
-                grid-row: 2;
-                font-size: 1.5em;
-                .info{
-                    font-size: 2vw;
+            .servicio__ul__li{ img{
+                transition:.5s .5s ease-in-out;
+                transform: rotateY(0deg);
+                transform-style: preserve-3d;
+            }}
+            .servicio__ul__li{ .info{
+                transition:all .5s ease-in-out;
+                transform: rotateY(90deg);
+            }}
+        }
+    }
+@media only screen and (min-width: 464px){
+    main{
+        .servicio{
+            .servicio__ul{
+                display: grid;
+                    grid-template-columns: repeat(4, 1fr);
+                    grid-template-rows: auto;
+                .servicio__ul__li{
+                    h3{
+                        top: 5px;
+                        font-size: 1em;
+                    }
+                    .info{
+                        font-size: 2vw;
+                    }
+                }
+                .simple{
+                    grid-column: 1 / 3;
+                    grid-row: 1;
+                }
+                .superior{
+                    grid-column: 3 / 5;
+                    grid-row: 1;
+                }
+                .king{
+                    grid-column: 1 / 3;
+                    grid-row: 2;
+                }
+                .jr{
+                    grid-column: 3 / 5;
+                    grid-row: 2;
+                }
+                .suite{
+                    grid-column: 1 / 5;
+                    grid-row: 3;
+                    font-size: 1.5em;
+                    .info{
+                        font-size: 4vw;
+                    }
                 }
             }
-            .suite{
-                grid-column: 4 / 7;
-                grid-row: 2;
-                font-size: 1.5em;
-                .info{
-                    font-size: 2vw;
+        }
+    }
+}
+@media only screen and (min-width: 900px){
+    main{
+        .servicio{
+            .servicio__ul{
+                display: grid;
+                    grid-template-columns: repeat(6, 1fr);
+                    grid-template-rows: auto;
+                .servicio__ul__li{
+                    position: relative;
+                    border: 2px solid black;
+                    .info{
+                        font-size: 1.5vw;
+                    }
+                }
+                .simple{
+                    grid-column: 1 / 3;
+                    grid-row: 1;
+                }
+                .superior{
+                    grid-column: 3 / 5;
+                    grid-row: 1;
+                }
+                .king{
+                    grid-column: 5 / 7;
+                    grid-row: 1;
+                }
+                .jr{
+                    grid-column: 1 / 4;
+                    grid-row: 2;
+                    font-size: 1.5em;
+                    .info{
+                        font-size: 2vw;
+                    }
+                }
+                .suite{
+                    grid-column: 4 / 7;
+                    grid-row: 2;
+                    font-size: 1.5em;
+                    .info{
+                        font-size: 2vw;
+                    }
                 }
             }
         }
-        .servicio__ul__li:hover img{
-            transition:all .5s ease-in-out;
-            transform: rotateY(90deg);
-            transform-style: preserve-3d;
-        }
-        .servicio__ul__li:hover .info{
-            transition:.5s .5s ease-in-out;
-            transform: rotateY(0deg);
-        }
-        .servicio__ul__li{ img{
-            transition:.5s .5s ease-in-out;
-            transform: rotateY(0deg);
-            transform-style: preserve-3d;
-        }}
-        .servicio__ul__li{ .info{
-            transition:all .5s ease-in-out;
-            transform: rotateY(90deg);
-        }}
     }
 }
