--- a/CSS/pruebacss.css
+++ b/CSS/pruebacss.css
@@ -308,16 +308,16 @@ main .galeria .galeria__section {
         left: 55%;
         box-shadow: 2px 7px 15px 6px; } }
 
-main .servicio .servicio__ul {
+.servicio .servicio__ul {
   display: flex;
   flex-wrap: wrap;
   position: relative; }
-  main .servicio .servicio__ul .servicio__ul__li {
+  .servicio .servicio__ul .servicio__ul__li {
     position: relative;
     border: 2px solid black; }
-    main .servicio .servicio__ul .servicio__ul__li img {
+    .servicio .servicio__ul .servicio__ul__li img {
       width: 100%; }
-    main .servicio .servicio__ul .servicio__ul__li h3 {
+    .servicio .servicio__ul .servicio__ul__li h3 {
       position: absolute;
       top: 10px;
       left: 10px;
@@ -325,9 +325,9 @@ main .servicio .servicio__ul {
       color: white;
       text-shadow: 3px 3px 3px #505050;
       z-index: 3; }
-    main .servicio .servicio__ul .servicio__ul__li h3:hover {
+    .servicio .servicio__ul .servicio__ul__li h3:hover {
       cursor: pointer; }
-    main .servicio .servicio__ul .servicio__ul__li .info {
+    .servicio .servicio__ul .servicio__ul__li .info {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -344,98 +344,98 @@ main .servicio .servicio__ul {
       color: #fff;
       z-index: 2;
       text-transform: uppercase; }
-      main .servicio .servicio__ul .servicio__ul__li .info .info__ul {
+      .servicio .servicio__ul .servicio__ul__li .info .info__ul {
         grid-area: ul; }
-        main .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
+        .servicio .servicio__ul .servicio__ul__li .info .info__ul li {
           text-align: center; }
-      main .servicio .servicio__ul .servicio__ul__li .info .carousel {
+      .servicio .servicio__ul .servicio__ul__li .info .carousel {
         display: none;
         width: 90%;
         margin: auto;
         grid-area: servicioImg; }
-        main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
+        .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item {
           width: 100%; }
-          main .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
+          .servicio .servicio__ul .servicio__ul__li .info .carousel .carousel-item img {
             width: 100%;
             height: auto; }
 
-main .servicio .servicio__ul__li:hover img {
+.servicio .servicio__ul__li:hover img {
   transition: all .5s ease-in-out;
   transform: rotateY(90deg);
   transform-style: preserve-3d; }
 
-main .servicio .servicio__ul__li:hover .info {
+.servicio .servicio__ul__li:hover .info {
   transition: .5s .5s ease-in-out;
   transform: rotateY(0deg); }
 
-main .servicio .servicio__ul__li img {
+.servicio .servicio__ul__li img {
   transition: .5s .5s ease-in-out;
   transform: rotateY(0deg);
   transform-style: preserve-3d; }
 
-main .servicio .servicio__ul__li .info {
+.servicio .servicio__ul__li .info {
   transition: all .5s ease-in-out;
   transform: rotateY(90deg); }
 
 @media only screen and (min-width: 464px) {
-  main .servicio .servicio__ul {
+  .servicio .servicio__ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto; }
-    main .servicio .servicio__ul .servicio__ul__li h3 {
+    .servicio .servicio__ul .servicio__ul__li h3 {
       top: 5px;
       font-size: 1em; }
-    main .servicio .servicio__ul .servicio__ul__li .info {
+    .servicio .servicio__ul .servicio__ul__li .info {
       font-size: 2vw; }
-    main .servicio .servicio__ul .simple {
+    .servicio .servicio__ul .simple {
       grid-column: 1 / 3;
       grid-row: 1; }
-    main .servicio .servicio__ul .superior {
+    .servicio .servicio__ul .superior {
       grid-column: 3 / 5;
       grid-row: 1; }
-    main .servicio .servicio__ul .king {
+    .servicio .servicio__ul .king {
       grid-column: 1 / 3;
       grid-row: 2; }
-    main .servicio .servicio__ul .jr {
+    .servicio .servicio__ul .jr {
       grid-column: 3 / 5;
       grid-row: 2; }
-    main .servicio .servicio__ul .suite {
+    .servicio .servicio__ul .suite {
       grid-column: 1 / 5;
       grid-row: 3;
       font-size: 1.5em; }
-      main .servicio .servicio__ul .suite .info {
+      .servicio .servicio__ul .suite .info {
         font-size: 4vw; } }
 
 @media only screen and (min-width: 900px) {
-  main .servicio .servicio__ul {
+  .servicio .servicio__ul {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: auto; }
-    main .servicio .servicio__ul .servicio__ul__li {
+    .servicio .servicio__ul .servicio__ul__li {
       position: relative;
       border: 2px solid black; }
-      main .servicio .servicio__ul .servicio__ul__li .info {
+      .servicio .servicio__ul .servicio__ul__li .info {
         font-size: 1.5vw; }
-    main .servicio .servicio__ul .simple {
+    .servicio .servicio__ul .simple {
       grid-column: 1 / 3;
       grid-row: 1; }
-    main .servicio .servicio__ul .superior {
+    .servicio .servicio__ul .superior {
       grid-column: 3 / 5;
       grid-row: 1; }
-    main .servicio .servicio__ul .king {
+    .servicio .servicio__ul .king {
       grid-column: 5 / 7;
       grid-row: 1; }
-    main .servicio .servicio__ul .jr {
+    .servicio .servicio__ul .jr {
       grid-column: 1 / 4;
       grid-row: 2;
       font-size: 1.5em; }
-      main .servicio .servicio__ul .jr .info {
+      .servicio .servicio__ul .jr .info {
         font-size: 2vw; }
-    main .servicio .servicio__ul .suite {
+    .servicio .servicio__ul .suite {
       grid-column: 4 / 7;
       grid-row: 2;
       font-size: 1.5em; }
-      main .servicio .servicio__ul .suite .info {
+      .servicio .servicio__ul .suite .info {
         font-size: 2vw; } }
 
 .reserva {
